# MIPT-networked

./: CMakeLists.txt
w1/: client.cpp  makefile  message.h  server.cpp
w10/: CMakeLists.txt  main.cpp
w2/: build.sh  client.cpp  lobby.cpp  server.cpp
w4/: CMakeLists.txt  bitstream.h  entity.h  main.cpp  protocol.cpp  protocol.h  server.cpp
w7/: CMakeLists.txt  bitstream.h  main.cpp  protocol.cpp  quantisation.h
